--- a/frontend/index.html
+++ b/frontend/index.html
@@ -215,8 +215,7 @@ https://templatemo.com/tm-571-hexashop
                 </div>
             </div>
         </div>
-    </footer>
-     -->
+    </footer> -->
 
     <!-- jQuery -->
     <!-- <script src="assets/js/jquery-2.1.0.min.js"></script> -->
